Fix merging issues

--- a/03_setup_k8s_platform/templates/gravitee/apis/frost/frost_sensorthings.json.j2
+++ b/03_setup_k8s_platform/templates/gravitee/apis/frost/frost_sensorthings.json.j2
@@ -134,7 +134,7 @@
         "tokenFormUrlEncodedName": "token",
         "userClaim": "sub",
         "clientSecret": "{{ IDM_CLIENT_SECRET_API_ACCESS }}",
-        "clientId": "{{ keycloak.IDM_CLIENT_API_ACCESS }}",
+        "clientId": "{{ IDM_CLIENT_API_ACCESS }}",
         "tokenHeaderName": ""
       }
     }
