--- a/03_setup_k8s_platform/templates/gravitee/create_default_application.json.j2
+++ b/03_setup_k8s_platform/templates/gravitee/create_default_application.json.j2
@@ -3,7 +3,7 @@
     "name": "{{ gravitee.PORTAL_APPLICATION }}",
     "settings": {
         "app": {
-            "client_id": "{{ keycloak.IDM_CLIENT_API_ACCESS }}"
+            "client_id": "{{ IDM_CLIENT_API_ACCESS }}"
         }
     }
 }
