--- a/03_setup_k8s_platform/templates/gravitee/create_identity_provider_keycloak.json.j2
+++ b/03_setup_k8s_platform/templates/gravitee/create_identity_provider_keycloak.json.j2
@@ -3,7 +3,7 @@
     "type": "oidc",
     "name": "KEYCLOAK",
     "configuration": {
-        "clientId": "{{ keycloak.IDM_CLIENT_GRAVITEE }}",
+        "clientId": "{{ IDM_CLIENT_GRAVITEE }}",
         "clientSecret": "{{ IDM_CLIENT_SECRET_GRAVITEE }}",
         "tokenEndpoint": "https://idm.{{ DOMAIN }}/auth/realms/{{ IDM_REALM }}/protocol/openid-connect/token",
         "authorizeEndpoint": "https://idm.{{ DOMAIN }}/auth/realms/{{ IDM_REALM }}/protocol/openid-connect/auth",
