--- a/03_setup_k8s_platform/templates/gravitee/update_identity_provider_keycloak.json.j2
+++ b/03_setup_k8s_platform/templates/gravitee/update_identity_provider_keycloak.json.j2
@@ -1,7 +1,7 @@
 {
     "name": "KEYCLOAK",
     "configuration": {
-        "clientId": "{{ keycloak.IDM_CLIENT_GRAVITEE }}",
+        "clientId": "{{ IDM_CLIENT_GRAVITEE }}",
         "clientSecret": "{{ IDM_CLIENT_SECRET_GRAVITEE }}",
         "tokenEndpoint": "https://idm.{{ DOMAIN }}/auth/realms/{{ IDM_REALM }}/protocol/openid-connect/token",
         "tokenIntrospectionEndpoint": "https://idm.{{ DOMAIN }}/auth/realms/{{ IDM_REALM }}/protocol/openid-connect/token/introspect",
