Fixed copy&paste-error in header comment.

--- a/03_setup_k8s_platform/templates/frost/frost_values.yaml.j2
+++ b/03_setup_k8s_platform/templates/frost/frost_values.yaml.j2
@@ -1,4 +1,4 @@
-# Default values for CKAN Helm chart.
+# Default values for FROST Helm chart.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
