--- a/03_setup_k8s_platform/templates/keycloak/components/ldap_provider.json.j2
+++ b/03_setup_k8s_platform/templates/keycloak/components/ldap_provider.json.j2
@@ -50,7 +50,7 @@
             "false"
         ],
         "connectionUrl": [
-            "{{ openldap_url }}"
+            "{{ OPENLDAP_URL }}"
         ],
         "syncRegistrations": [
             "true"
