--- a/03_setup_k8s_platform/templates/public/oauth2-proxy_values.yaml.j2
+++ b/03_setup_k8s_platform/templates/public/oauth2-proxy_values.yaml.j2
@@ -85,7 +85,7 @@ service:
   # -- Kubernetes service type for the GUI
   type: ClusterIP
   # -- Kubernetes port where the GUI is exposed
-  port: 80
+  portNumber: 80
   # -- Service annotations for the GUI
   annotations: {}
   # -- (string) Loadbalance IP for the GUI
