--- a/03_setup_k8s_platform/templates/public/oauth2-proxy_values.yaml.j2
+++ b/03_setup_k8s_platform/templates/public/oauth2-proxy_values.yaml.j2
@@ -1,7 +1,7 @@
 # Oauth client configuration specifics
 config:
   # -- OAuth client ID
-  clientID: "{{ IDM_CLIENT_GRAFANA }}"
+  clientID: "{{ default.IDM_CLIENT_GRAFANA }}"
   # -- OAuth client secret
   clientSecret: "{{ IDM_CLIENT_SECRET_GRAFANA }}"
   # -- server specific cookie for the secret; create a new one with `openssl rand -base64 32 | head -c 32 | base64`
@@ -18,7 +18,7 @@ config:
 
   # -- custom [oauth2_proxy.cfg](https://github.com/oauth2-proxy/oauth2-proxy/blob/master/contrib/oauth2-proxy.cfg.example) contents for settings not overridable via environment nor command line
   configFile: |-
-    client_id = "{{ IDM_CLIENT_GRAFANA }}"
+    client_id = "{{ default.IDM_CLIENT_GRAFANA }}"
     client_secret = "{{ IDM_CLIENT_SECRET_GRAFANA }}"
     email_domains = [ "*" ]
     upstreams = [ "file:///dev/null" ]
