--- a/03_setup_k8s_platform/templates/keycloak/clients/masterportal.json.j2
+++ b/03_setup_k8s_platform/templates/keycloak/clients/masterportal.json.j2
@@ -8,7 +8,7 @@
     "alwaysDisplayInConsole": false,
     "clientAuthenticatorType": "client-secret",
     "redirectUris": [
-        "https://*.{{ DOMAIN }}/*"
+        "https://mpoauth.{{ DOMAIN }}/*"
     ],
     "webOrigins": [
         "https://idm.{{ DOMAIN }}"
