update grafana datasource access, add qgis-server to http-configmap

--- a/03_setup_k8s_platform/templates/grafana/grafana-values.yaml.j2
+++ b/03_setup_k8s_platform/templates/grafana/grafana-values.yaml.j2
@@ -456,7 +456,7 @@ datasources:
         timescaledb: true
         sslmode: disable
       secureJsonData:
-        password: {{ timescale_credentials.password }}
+        password: {{ TIMESCALE_PASSWORD }}
 
 ## Configure notifiers
 ## ref: http://docs.grafana.org/administration/provisioning/#alert-notification-channels
