update grafana permissions and fix frost health-check

--- a/03_setup_k8s_platform/templates/gravitee/apis/frost/frost_sensorthings.json.j2
+++ b/03_setup_k8s_platform/templates/gravitee/apis/frost/frost_sensorthings.json.j2
@@ -51,7 +51,7 @@
                 {
                   "name" : "default-step",
                   "request" : {
-                    "path" : "/version",
+                    "path" : "version",
                     "method" : "GET",
                     "fromRoot" : false
                   },
@@ -96,7 +96,7 @@
         {
           "name" : "default-step",
           "request" : {
-            "path" : "/version",
+            "path" : "version",
             "method" : "GET",
             "fromRoot" : false
           },
