--- a/03_setup_k8s_platform/templates/grafana/grafana-values.yaml.j2
+++ b/03_setup_k8s_platform/templates/grafana/grafana-values.yaml.j2
@@ -356,7 +356,7 @@ env:
   GF_AUTH_GENERIC_OAUTH_TOKEN_URL: "{{ IDM_ENDP_TOKEN }}"
   GF_AUTH_GENERIC_OAUTH_API_URL: "{{ IDM_ENDP_USER_INFO }}"
   GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: "true"
-  GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "contains(roles[*], 'grafanaAdmin') && 'Admin' || contains(roles[*], 'grafanaEditor') && 'Editor' || 'Viewer'"
+  GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "contains(groups[*], 'grafanaAdmin') && 'Admin' || contains(groups[*], 'grafanaEditor') && 'Editor' || 'Viewer'"
   GF_SECURITY_ALLOW_EMBEDDING: "true"
   GF_SECURITY_COOKIE_SAMESITE: "lax"
   GF_SERVER_ROOT_URL: "https://{{ grafana.ingress_server_name }}.{{ DOMAIN }}"
